--- a/environment.yml
+++ b/environment.yml
@@ -99,4 +99,35 @@ dependencies:
   - xz=5.6.4=h5eee18b_1
   - zlib=1.2.13=h5eee18b_1
   - zstd=1.5.6=hc292b87_0
-prefix: /home/indu/anaconda3/envs/myenv
+  - pip:
+      - aiohappyeyeballs==2.6.1
+      - aiohttp==3.11.16
+      - aiosignal==1.3.2
+      - async-timeout==5.0.1
+      - attrs==25.3.0
+      - certifi==2025.1.31
+      - charset-normalizer==3.4.1
+      - datasets==3.5.0
+      - dill==0.3.8
+      - evaluate==0.4.3
+      - filelock==3.18.0
+      - frozenlist==1.6.0
+      - fsspec==2024.12.0
+      - huggingface-hub==0.30.2
+      - idna==3.10
+      - multidict==6.4.3
+      - multiprocess==0.70.16
+      - propcache==0.3.1
+      - pyarrow==19.0.1
+      - pyyaml==6.0.2
+      - regex==2024.11.6
+      - requests==2.32.3
+      - safetensors==0.5.3
+      - tokenizers==0.21.1
+      - tqdm==4.67.1
+      - transformers==4.51.3
+      - typing-extensions==4.13.2
+      - urllib3==2.4.0
+      - xxhash==3.5.0
+      - yarl==1.20.0
+prefix: /home/maria/anaconda3/envs/myenv
