--- a/environment.yml
+++ b/environment.yml
@@ -1,5 +1,7 @@
 name: myenv
 channels:
+  - pytorch
+  - nvidia
   - defaults
   - https://repo.anaconda.com/pkgs/main
   - https://repo.anaconda.com/pkgs/r
@@ -12,56 +14,95 @@ dependencies:
   - bzip2=1.0.8=h5eee18b_6
   - c-ares=1.19.1=h5eee18b_0
   - ca-certificates=2025.2.25=h06a4308_0
+  - certifi=2025.1.31=py310h06a4308_0
   - contourpy=1.3.1=py310hdb19cb5_0
+  - cuda-cudart=11.8.89=0
+  - cuda-cupti=11.8.87=0
+  - cuda-libraries=11.8.0=0
+  - cuda-nvrtc=11.8.89=0
+  - cuda-nvtx=11.8.86=0
+  - cuda-runtime=11.8.0=0
+  - cuda-version=12.8=3
   - cycler=0.11.0=pyhd3eb1b0_0
   - cyrus-sasl=2.1.28=h52b45da_1
   - expat=2.7.1=h6a678d5_0
+  - ffmpeg=4.3=hf484d3e_0
   - fontconfig=2.14.1=h55d465d_3
   - fonttools=4.55.3=py310h5eee18b_0
   - freetype=2.13.3=h4a9f257_0
+  - giflib=5.2.2=h5eee18b_0
+  - gmp=6.3.0=h6a678d5_0
+  - gmpy2=2.2.1=py310h5eee18b_0
+  - gnutls=3.6.15=he1e5248_0
   - icu=73.1=h6a678d5_0
   - intel-openmp=2023.1.0=hdb19cb5_46306
+  - jinja2=3.1.6=py310h06a4308_0
+  - joblib=1.4.2=py310h06a4308_0
   - jpeg=9e=h5eee18b_3
   - kiwisolver=1.4.8=py310h6a678d5_0
   - krb5=1.20.1=h143b758_1
+  - lame=3.100=h7b6447c_0
   - lcms2=2.16=h92b89f2_1
   - ld_impl_linux-64=2.40=h12ee557_0
   - lerc=4.0.0=h6a678d5_0
   - libabseil=20250127.0=cxx17_h6a678d5_0
+  - libcublas=11.11.3.6=0
+  - libcufft=10.9.0.58=0
+  - libcufile=1.13.1.3=0
   - libcups=2.4.2=h2d74bed_1
+  - libcurand=10.3.9.90=0
   - libcurl=8.12.1=hc9e6f67_0
+  - libcusolver=11.4.1.48=0
+  - libcusparse=11.7.5.86=0
   - libdeflate=1.22=h5eee18b_0
   - libedit=3.1.20230828=h5eee18b_0
   - libev=4.33=h7f8727e_1
   - libffi=3.4.4=h6a678d5_1
   - libgcc-ng=11.2.0=h1234567_1
+  - libgfortran-ng=11.2.0=h00389a5_1
+  - libgfortran5=11.2.0=h1234567_1
   - libglib=2.78.4=hdc74915_0
   - libgomp=11.2.0=h1234567_1
   - libiconv=1.16=h5eee18b_3
+  - libidn2=2.3.4=h5eee18b_0
+  - libjpeg-turbo=2.0.0=h9bf148f_0
   - libnghttp2=1.57.0=h2d74bed_0
+  - libnpp=11.8.0.86=0
+  - libnvjpeg=11.9.0.86=0
   - libpng=1.6.39=h5eee18b_0
   - libpq=17.4=hdbd6064_0
   - libprotobuf=5.29.3=hc99497a_0
   - libssh2=1.11.1=h251f7ec_0
   - libstdcxx-ng=11.2.0=h1234567_1
+  - libtasn1=4.19.0=h5eee18b_0
   - libtiff=4.7.0=hde9077f_0
+  - libunistring=0.9.10=h27cfd23_0
   - libuuid=1.41.5=h5eee18b_0
+  - libwebp=1.3.2=h9f374a3_1
   - libwebp-base=1.3.2=h5eee18b_1
   - libxcb=1.15=h7f8727e_0
   - libxkbcommon=1.0.1=h097e994_2
   - libxml2=2.13.7=hfdd30dd_0
+  - llvm-openmp=14.0.6=h9e868ea_0
   - lz4-c=1.9.4=h6a678d5_1
+  - markupsafe=3.0.2=py310h5eee18b_0
   - matplotlib=3.10.0=py310h06a4308_0
   - matplotlib-base=3.10.0=py310hbfdbfaf_0
   - mkl=2023.1.0=h213fc3f_46344
   - mkl-service=2.4.0=py310h5eee18b_2
   - mkl_fft=1.3.11=py310h5eee18b_0
   - mkl_random=1.2.8=py310h1128e8f_0
+  - mpc=1.3.1=h5eee18b_0
+  - mpfr=4.2.1=h5eee18b_0
+  - mpmath=1.3.0=py310h06a4308_0
   - mysql=8.4.0=h721767e_2
   - ncurses=6.4=h6a678d5_0
+  - nettle=3.7.3=hbbd107a_1
+  - networkx=3.4.2=py310h06a4308_0
   - numexpr=2.10.1=py310h3c60e43_0
   - numpy=2.2.4=py310h23a989f_0
   - numpy-base=2.2.4=py310hee5b745_0
+  - openh264=2.1.1=h4ff587b_0
   - openjpeg=2.5.2=h0d4d230_1
   - openldap=2.6.4=h42fbc30_0
   - openssl=3.0.16=h5eee18b_0
@@ -73,10 +114,15 @@ dependencies:
   - pyparsing=3.2.0=py310h06a4308_0
   - pyqt=6.7.1=py310h6a678d5_1
   - pyqt6-sip=13.9.1=py310h5eee18b_1
+  - pysocks=1.7.1=py310h06a4308_0
   - python=3.10.16=he870216_1
   - python-dateutil=2.9.0post0=py310h06a4308_2
   - python-tzdata=2023.3=pyhd3eb1b0_0
+  - pytorch=2.5.1=py3.10_cuda11.8_cudnn9.1.0_0
+  - pytorch-cuda=11.8=h7e8668a_6
+  - pytorch-mutex=1.0=cuda
   - pytz=2024.1=py310h06a4308_0
+  - pyyaml=6.0.2=py310h5eee18b_0
   - qtbase=6.7.3=hdaa5aa8_0
   - qtdeclarative=6.7.3=h6a678d5_0
   - qtsvg=6.7.3=he621ea3_0
@@ -84,19 +130,30 @@ dependencies:
   - qtwebchannel=6.7.3=h6a678d5_0
   - qtwebsockets=6.7.3=h6a678d5_0
   - readline=8.2=h5eee18b_0
+  - requests=2.32.3=py310h06a4308_1
+  - scikit-learn=1.6.1=py310h6a678d5_0
+  - scipy=1.15.2=py310h23a989f_1
   - setuptools=72.1.0=py310h06a4308_0
   - sip=6.10.0=py310h6a678d5_0
   - six=1.17.0=py310h06a4308_0
   - sqlite=3.45.3=h5eee18b_0
+  - sympy=1.13.3=py310h06a4308_1
   - tbb=2021.8.0=hdb19cb5_0
+  - threadpoolctl=3.5.0=py310h2f386ee_0
   - tk=8.6.14=h39e8969_0
   - tomli=2.0.1=py310h06a4308_0
+  - torchaudio=2.5.1=py310_cu118
+  - torchtriton=3.1.0=py310
+  - torchvision=0.20.1=py310_cu118
   - tornado=6.4.2=py310h5eee18b_0
+  - tqdm=4.67.1=py310h2f386ee_0
+  - typing_extensions=4.12.2=py310h06a4308_0
   - tzdata=2025a=h04d1e81_0
   - unicodedata2=15.1.0=py310h5eee18b_1
   - wheel=0.45.1=py310h06a4308_0
   - xcb-util-cursor=0.1.4=h5eee18b_0
   - xz=5.6.4=h5eee18b_1
+  - yaml=0.2.5=h7b6447c_0
   - zlib=1.2.13=h5eee18b_1
   - zstd=1.5.6=hc292b87_0
   - pip:
@@ -105,7 +162,6 @@ dependencies:
       - aiosignal==1.3.2
       - async-timeout==5.0.1
       - attrs==25.3.0
-      - certifi==2025.1.31
       - charset-normalizer==3.4.1
       - datasets==3.5.0
       - dill==0.3.8
@@ -119,12 +175,9 @@ dependencies:
       - multiprocess==0.70.16
       - propcache==0.3.1
       - pyarrow==19.0.1
-      - pyyaml==6.0.2
       - regex==2024.11.6
-      - requests==2.32.3
       - safetensors==0.5.3
       - tokenizers==0.21.1
-      - tqdm==4.67.1
       - transformers==4.51.3
       - typing-extensions==4.13.2
       - urllib3==2.4.0
