Added start code

--- a/environment.yml
+++ b/environment.yml
@@ -2,19 +2,22 @@ name: myenv
 channels:
   - pytorch
   - nvidia
+  - conda-forge
   - defaults
   - https://repo.anaconda.com/pkgs/main
   - https://repo.anaconda.com/pkgs/r
 dependencies:
   - _libgcc_mutex=0.1=main
   - _openmp_mutex=5.1=1_gnu
+  - asttokens=3.0.0=pyhd8ed1ab_1
   - blas=1.0=mkl
   - bottleneck=1.4.2=py310ha9d4c09_0
   - brotli-python=1.0.9=py310h6a678d5_9
   - bzip2=1.0.8=h5eee18b_6
   - c-ares=1.19.1=h5eee18b_0
   - ca-certificates=2025.2.25=h06a4308_0
-  - certifi=2025.1.31=py310h06a4308_0
+  - certifi=2025.1.31=pyhd8ed1ab_0
+  - comm=0.2.2=pyhd8ed1ab_1
   - contourpy=1.3.1=py310hdb19cb5_0
   - cuda-cudart=11.8.89=0
   - cuda-cupti=11.8.87=0
@@ -25,6 +28,10 @@ dependencies:
   - cuda-version=12.8=3
   - cycler=0.11.0=pyhd3eb1b0_0
   - cyrus-sasl=2.1.28=h52b45da_1
+  - debugpy=1.8.11=py310h6a678d5_0
+  - decorator=5.2.1=pyhd8ed1ab_0
+  - exceptiongroup=1.2.2=pyhd8ed1ab_1
+  - executing=2.1.0=pyhd8ed1ab_1
   - expat=2.7.1=h6a678d5_0
   - ffmpeg=4.3=hf484d3e_0
   - fontconfig=2.14.1=h55d465d_3
@@ -35,10 +42,16 @@ dependencies:
   - gmpy2=2.2.1=py310h5eee18b_0
   - gnutls=3.6.15=he1e5248_0
   - icu=73.1=h6a678d5_0
+  - importlib-metadata=8.6.1=pyha770c72_0
   - intel-openmp=2023.1.0=hdb19cb5_46306
+  - ipykernel=6.29.5=pyh3099207_0
+  - ipython=8.35.0=pyh907856f_0
+  - jedi=0.19.2=pyhd8ed1ab_1
   - jinja2=3.1.6=py310h06a4308_0
   - joblib=1.4.2=py310h06a4308_0
   - jpeg=9e=h5eee18b_3
+  - jupyter_client=8.6.3=pyhd8ed1ab_1
+  - jupyter_core=5.7.2=pyh31011fe_1
   - kiwisolver=1.4.8=py310h6a678d5_0
   - krb5=1.20.1=h143b758_1
   - lame=3.100=h7b6447c_0
@@ -72,6 +85,7 @@ dependencies:
   - libpng=1.6.39=h5eee18b_0
   - libpq=17.4=hdbd6064_0
   - libprotobuf=5.29.3=hc99497a_0
+  - libsodium=1.0.18=h36c2ea0_1
   - libssh2=1.11.1=h251f7ec_0
   - libstdcxx-ng=11.2.0=h1234567_1
   - libtasn1=4.19.0=h5eee18b_0
@@ -88,6 +102,7 @@ dependencies:
   - markupsafe=3.0.2=py310h5eee18b_0
   - matplotlib=3.10.0=py310h06a4308_0
   - matplotlib-base=3.10.0=py310hbfdbfaf_0
+  - matplotlib-inline=0.1.7=pyhd8ed1ab_1
   - mkl=2023.1.0=h213fc3f_46344
   - mkl-service=2.4.0=py310h5eee18b_2
   - mkl_fft=1.3.11=py310h5eee18b_0
@@ -97,6 +112,7 @@ dependencies:
   - mpmath=1.3.0=py310h06a4308_0
   - mysql=8.4.0=h721767e_2
   - ncurses=6.4=h6a678d5_0
+  - nest-asyncio=1.6.0=pyhd8ed1ab_1
   - nettle=3.7.3=hbbd107a_1
   - networkx=3.4.2=py310h06a4308_0
   - numexpr=2.10.1=py310h3c60e43_0
@@ -108,9 +124,18 @@ dependencies:
   - openssl=3.0.16=h5eee18b_0
   - packaging=24.2=py310h06a4308_0
   - pandas=2.2.3=py310h6a678d5_0
+  - parso=0.8.4=pyhd8ed1ab_1
   - pcre2=10.42=hebb0a14_1
+  - pexpect=4.9.0=pyhd8ed1ab_1
+  - pickleshare=0.7.5=pyhd8ed1ab_1004
   - pillow=11.1.0=py310hac6e08b_1
   - pip=25.0=py310h06a4308_0
+  - platformdirs=4.3.7=pyh29332c3_0
+  - prompt-toolkit=3.0.51=pyha770c72_0
+  - psutil=5.9.1=py310h5764c6d_0
+  - ptyprocess=0.7.0=pyhd8ed1ab_1
+  - pure_eval=0.2.3=pyhd8ed1ab_1
+  - pygments=2.19.1=pyhd8ed1ab_0
   - pyparsing=3.2.0=py310h06a4308_0
   - pyqt=6.7.1=py310h6a678d5_1
   - pyqt6-sip=13.9.1=py310h5eee18b_1
@@ -118,11 +143,13 @@ dependencies:
   - python=3.10.16=he870216_1
   - python-dateutil=2.9.0post0=py310h06a4308_2
   - python-tzdata=2023.3=pyhd3eb1b0_0
+  - python_abi=3.10=2_cp310
   - pytorch=2.5.1=py3.10_cuda11.8_cudnn9.1.0_0
   - pytorch-cuda=11.8=h7e8668a_6
   - pytorch-mutex=1.0=cuda
   - pytz=2024.1=py310h06a4308_0
   - pyyaml=6.0.2=py310h5eee18b_0
+  - pyzmq=26.2.0=py310h6a678d5_0
   - qtbase=6.7.3=hdaa5aa8_0
   - qtdeclarative=6.7.3=h6a678d5_0
   - qtsvg=6.7.3=he621ea3_0
@@ -137,7 +164,7 @@ dependencies:
   - sip=6.10.0=py310h6a678d5_0
   - six=1.17.0=py310h06a4308_0
   - sqlite=3.45.3=h5eee18b_0
-  - sympy=1.13.3=py310h06a4308_1
+  - stack_data=0.6.3=pyhd8ed1ab_1
   - tbb=2021.8.0=hdb19cb5_0
   - threadpoolctl=3.5.0=py310h2f386ee_0
   - tk=8.6.14=h39e8969_0
@@ -147,16 +174,21 @@ dependencies:
   - torchvision=0.20.1=py310_cu118
   - tornado=6.4.2=py310h5eee18b_0
   - tqdm=4.67.1=py310h2f386ee_0
+  - traitlets=5.14.3=pyhd8ed1ab_1
   - typing_extensions=4.12.2=py310h06a4308_0
   - tzdata=2025a=h04d1e81_0
   - unicodedata2=15.1.0=py310h5eee18b_1
+  - wcwidth=0.2.13=pyhd8ed1ab_1
   - wheel=0.45.1=py310h06a4308_0
   - xcb-util-cursor=0.1.4=h5eee18b_0
   - xz=5.6.4=h5eee18b_1
   - yaml=0.2.5=h7b6447c_0
+  - zeromq=4.3.5=h6a678d5_0
+  - zipp=3.21.0=pyhd8ed1ab_1
   - zlib=1.2.13=h5eee18b_1
   - zstd=1.5.6=hc292b87_0
   - pip:
+      - accelerate==1.6.0
       - aiohappyeyeballs==2.6.1
       - aiohttp==3.11.16
       - aiosignal==1.3.2
@@ -177,6 +209,7 @@ dependencies:
       - pyarrow==19.0.1
       - regex==2024.11.6
       - safetensors==0.5.3
+      - sympy==1.13.1
       - tokenizers==0.21.1
       - transformers==4.51.3
       - typing-extensions==4.13.2
