modifying git ignotr

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 # Ignorar todo dentro de gpt2-gsm8k-finetuned
-/gpt2Model/gpt2-gsm8k-finetuned/
+/gpt2BaseModel/gpt2-gsm8k-finetuned/
 /phiModel/results_phi/
 /phiModel/results_phi2/
 /phiModel/fine_tuned_phi/
-
+*.pt
+*.bin
